<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_password_txtview"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email_send_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_forgot_pw"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/send_link_btn"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="#8E24AA"
        android:text="@string/send_link_btn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />
</LinearLayout>